Fixed checkboxes not showing

--- a/assets/style.css
+++ b/assets/style.css
@@ -19,7 +19,6 @@ input {
   width: 100%;
   margin-bottom: 1em;
   font-size: 1em;
-  -webkit-appearance: none;
 }
 
 h1#title {
